--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,3 +195,22 @@ figure img {
 .img-404 img {
   max-height: 50vh;
 }
+/* style.css */
+body {
+    font-family: Arial, sans-serif;
+}
+
+header {
+    background-color: #f1f1f1;
+    padding: 20px;
+    text-align: center;
+}
+
+footer {
+    background-color: #f1f1f1;
+    text-align: center;
+    padding: 10px;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
